tests/baselines/reference/templateStringUnterminated3_ES6.errors.txt
templateStringUnterminated3_ES6.ts(1,4): error TS1160: Unterminated template literal.


==== templateStringUnterminated3_ES6.ts (1 errors) ====
    `\\
       
!!! error TS1160: Unterminated template literal.